fix v alignment

--- a/web/app/themes/fuse/assets/css/pages/_agents.sass
+++ b/web/app/themes/fuse/assets/css/pages/_agents.sass
@@ -43,12 +43,14 @@
     .contact-info
         display: flex
         align-items: center
+        line-height: 1
 
         > div, > div > ul
-            display: inherit
+            display: inline
             align-items: inherit
 
         *
+            line-height: 1
             vertical-align: middle
 
 .agent-copy
